--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/index.js",
+    "start": "node src/index.ts",
     "lint": "eslint 'src/**/*.{ts,tsx}'",
     "build": "tsc",
     "dev": "nodemon src/index.ts",
-     "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +19,7 @@
     "@types/node": "^22.13.8",
     "eslint": "^9.21.0",
     "globals": "^16.0.0",
+    "nodemon": "^3.1.9",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.25.0"
   }
